Fix formatting issues in sections one and four for narrow displays
The image in section one and the button in section four both wrap
around their containers when the display is narrow instead of
overflowing. Additionally, the button in section four is able to shrink
with its container. Horizontal padding is changed from a fixed 192px to
15% to allow the layout to adapt to narrow displays.

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .header {
     display: flex;
-    padding: 1em 192px;
+    padding: 1em 15%;
     justify-content: space-between;
 }
 
@@ -47,10 +47,15 @@ a {
 .section-one {
     background-color: #1F2937;
     display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 64px 192px;
+    padding: 64px 15%;
     gap: 4em;
+}
+
+.section-one .container {
+    max-width: 60%;
 }
 
 .main-text {
@@ -65,7 +70,6 @@ a {
 
 .section-one .main-text {
     font-size: 48px;
-    
 }
 
 .section-one .secondary-text {
@@ -80,7 +84,6 @@ a {
     color: #F9FAF8;
     font-weight: 600;
     padding: 8px 32px;
-    flex: none;
 }
 
 .section-one img {
@@ -92,7 +95,7 @@ a {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    padding: 16px 192px 32px 192px;
+    padding: 16px 15% 32px 15%;
     gap: 16px;
 }
 
@@ -143,7 +146,7 @@ h2 {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    padding: 128px 192px;
+    padding: 128px 15%;
     gap: 12px;
 }
 
@@ -166,13 +169,14 @@ h2 {
 }
 
 .section-four {
-    padding: 96px 192px;
+    padding: 96px 15%;
 }
 
 .section-four .container {
     background-color: #3882F6;
     border-radius: 8px;
     display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
     padding: 48px 96px;
@@ -183,7 +187,7 @@ h2 {
 }
 
 .section-four .secondary-text {
-    margin: 4px 0 0 0;
+    margin: 4px 0;
 }
 
 .section-four a {
@@ -194,7 +198,8 @@ h2 {
     color: #F9FAF8;
     font-weight: 600;
     padding: 8px 32px;
-    flex: none;
+    margin: 8px 0;
+    flex: 0 1 auto;
 }
 
 .footer {
@@ -202,5 +207,5 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 48px 192px;
+    padding: 48px 15%;
 }
